--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" >
     <link rel="icon" type="image/gif" href="animated_favicon1.gif" >
     <title>API Compass</title>
